tests/paczka1/fuzzy1/43138453.err
Error in line 1: wH9ioo6 S599 1,0
Error in line 10: uS4w S599 19,11
Error in line 7: wH9ioo6 S412 13,9
Error in line 13: wH9ioo6 A334 15,4
Error in line 18: oHzMIki S485 414,1
Error in line 8: A334 S412 5,8
Error in line 23: wH9ioo6 S412 33,2
Error in line 25: wH9ioo6 A334 399,4
